# anchovy

./: .gitignore  .tokeignore  README.md  pyproject.toml  run-example.sh
.github/workflows/: python-cq.yml  python-publish.yml
docs/: FAQ.md  README.md  advanced-usage.md  api-reference.md  core-concepts.md  custody-and-rebuilds.md  getting-started.md  matchers-pathcalcs.md  steps-reference.md
examples/: basic_site.py  code_index.py  css_transformer.py  gallery.py
examples/_images/: .credits.md
examples/basic_site/: index.md
examples/basic_site/static/: core.css  images
examples/code_index/: base.jinja.html  index.jinja.html
examples/code_index/static/: core.anchovy.css  css_pack.txt  pygments.anchovy.css
examples/gallery/: base.jinja.html  index.md
examples/gallery/static/: core.css
src/anchovy/: __init__.py  __main__.py  cli.py  context.py  core.py  css.py  custody.py  dependencies.py  helpers.py  images.py  include.py  jinja.py  minify.py  paths.py  pretty_utils.py  rewrite.py  server.py  simple.py  step.py  test_harness.py
src/anchovy/components/: md_frontmatter.py  md_rendering.py
src/anchovy/css/: __init__.py  parser.py
test/: test_core.py  test_examples.py  test_include.py  test_paths.py  test_server.py
test/artifacts/: basic_site.json  code_index.json  gallery.json
